# UICore

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  python_step1_create_activate_venv.bat  python_step2_conan_install_build.bat  python_step3_conan_create.bat  windows.txt
include/UICore/: UICore.h
resources/: Resource.rc  resource.h
src/: UICore.cpp
tests/: CMakeLists.txt  main_test.cpp
